<resources>
    <string name="app_name">potenz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="insight">Insights</string>
    <string name="course">Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_content">Image Content</string>
    <string name="subscription">Jumlah Tiket</string>
    <string name="premium">Premium</string>
    <string name="status">Status</string>
    <string name="pengejar_karier">Pengejar Karier</string>
    <string name="psikotes">Psikotes</string>
    <string name="ikuti_tes_dan_temukan_potensi_terbaikmu">Ikuti tes dan temukan potensi terbaikmu</string>
    <string name="artikel">Artikel</string>
    <string name="baca_artikel_terpilih_khusus_untukmu">Baca artikel terpilih khusus untukmu</string>
    <string name="hi_">Hi, </string>
    <string name="hi_placeholder">Hi, %s!</string>
    <string name="apa_motivasimu_menggunakan_potenz">Apa motivasimu menggunakan potenz?</string>
    <string name="mencari_tahu_potensi_diri">Mencari tahu potensi diri</string>
    <string name="menentukan_pilihan_jurusan_yang_tepat">Menentukan pilihan jurusan yang tepat</string>
    <string name="mencari_tahu_beragam_opsi">Mencari tahu beragam opsi</string>
    <string name="mengasah_potensi_diri_dan_hardskill">Mengasah potensi diri dan hardskill</string>
    <string name="mengisi_waktu_luang">Mengisi waktu luang</string>
    <string name="mempersiapkan_karier_impian">Mempersiapkan karier impian</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="apa_karier_impianmu_saat_ini">Apa karier\nimpianmu saat ini?</string>
    <string name="psikotes_adalah">Psikotes merupakan serangkaian tes yang dilakukan untuk mengetahui minat, bakat, serta potensi terbaikmu. Hasil dari tes ini akan membantu <b>potenz</b> untuk merekomendasikan konten belajar, artikel, dan latihan yang didesain untuk mendukung pengembangan potensimu.</string>
    <string name="hasil">Hasil</string>
    <string name="karakteristik_teratas">Karakteristik Teratas</string>
    <string name="log_out">Log Out</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="learn">Learn</string>
    <string name="question1">Pernyataan mana paling menggambarkan kamu?</string>
    <string name="question2">Bagaimana kamu membuat keputusan di tempat kerja?</string>
    <string name="question3">Apa preferensi kamu ketika mengerjakan sebuah proyek?</string>
    <string name="video">Video</string>
    <string name="masuk">Masuk</string>
    <string name="nama">nama</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="progress">Progress</string>
    <string name="test_result">Test Result</string>
    <string name="_40">40%</string>
    <string name="pracical_hardworker">Pracical Hardworker</string>
    <string name="_25">25%</string>
    <string name="_15">15%</string>
    <string name="people_hero">People Hero</string>
    <string name="karakteristik">Karakteristik</string>
    <string name="design">Design</string>
    <string name="tiket">Tiket</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="x0">x0</string>
    <string name="total">Total</string>
    <string name="saya_sudah_bayar">Saya Sudah Bayar</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
    <string name="kini_kamu_bisa_mengakses_konten_premium_dengan_tiket_yang_telah_kamu_beli_kamu_bisa_melihat_jumlah_tiketmu_di_home">Kini kamu bisa mengakses konten premium dengan tiket yang telah kamu beli. Kamu bisa melihat jumlah tiketmu di Home.</string>
    <string name="selamat_pembelian_tiket_sudah_berhasil">Selamat, pembelian tiket sudah berhasil!</string>
    <string name="pembayaran_berhasil">Pembayaran Berhasil!</string>
    <string name="x1">x1</string>
    <string name="rp_20000">Rp. 20000</string>
    <string name="critical_thinking">Critical Thinking</string>
    <string name="smart_seeker">Smart Seeker</string>
    <string name="kamu_adalah_sesorang_yang_memiliki_cara_berpikir_yang_kritis_kamu_juga_tertarik_dengan_teknologi_dan_ingin_terjun_dalam_pengembangannya_n_nselain_itu_kamu_memiliki_sifat_yang_cerdas_dalam_belajar">Kamu adalah sesorang yang memiliki cara berpikir yang kritis. Kamu juga tertarik dengan teknologi dan ingin terjun dalam pengembangannya.\n\nSelain itu, kamu memiliki sifat yang cerdas dalam belajar.</string>
    <string name="software_ndeveloper">Software\nDeveloper</string>
    <string name="lihat_rekomendasi_konten">Lihat Rekomendasi Konten</string>
    <string name="rekomendasi_karir">Rekomendasi Karir</string>
    <string name="rekomendasi_jurusan">Rekomendasi Jurusan</string>
    <string name="programming_language">Programming Language</string>
    <string name="tech_trends">Tech Trends</string>
    <string name="self_development">Self Development</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="untuk_membuka_konten_ini_anda_memerlukan_tiket_ingin_beli_tiket">Untuk membuka konten ini Anda memerlukan tiket. Ingin beli tiket?</string>
    <string name="konten_terkunci">Konten Terkunci</string>
    <string name="learning_basic_programming">Learning Basic Programming</string>
    <string name="quincy_larson">Quincy Larson</string>
    <string name="freecodecamp_org">freecodecamp.org</string>
    <string name="description">Description</string>
    <string name="pada_course_ini_kamu_akan_mempelajari_apa_bahasa_pemrograman_dimulai_dari_awal_hingga_kamu_membuat_program_sendiri_di_akhir_akan_ada_challenge_untuk_menuji_kemampuanmu">Pada course ini kamu akan mempelajari apa itu bahasa pemrograman. Dimulai dari awal hingga kamu membuat program sendiri. Di akhir akan ada challenge untuk menuji kemampuanmu!</string>
    <string name="playlist">Playlist</string>

    <string-array name="pendidikan_options">
        <item>-- Pilih Pendidikan --</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>Kuliah</item>
        <item>Sudah Berkarir</item>
    </string-array>
</resources>