<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_beranda"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_consult"
        android:icon="@drawable/icon_consult"
        android:title="@string/consult" />

    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/icon_course"
        android:title="@string/course" />

    <item
        android:id="@+id/navigation_insight"
        android:icon="@drawable/icon_insights"
        android:title="@string/insight" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile" />

</menu>