<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.learn.DetailVideoFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp"
        >

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView40" />

        <TextView
            android:id="@+id/textView16"
            style="@style/TextNunito16BlackPurple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_main"
            android:padding="20dp"
            android:text="@string/video"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:background="@color/purple_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/img_video1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_play"
            app:layout_constraintBottom_toBottomOf="@+id/imageView18"
            app:layout_constraintEnd_toEndOf="@+id/imageView18"
            app:layout_constraintStart_toStartOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView38"
            style="@style/TextNunito14SBPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/learning_basic_programming"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView40"
            style="@style/TextNunito13NormalBlackregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quincy_larson"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <View
            android:id="@+id/divider2"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginStart="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/textView40"
            app:layout_constraintStart_toEndOf="@+id/textView40"
            app:layout_constraintTop_toTopOf="@+id/textView40" />

        <TextView
            android:id="@+id/textView41"
            style="@style/TextNunito13NormalBlackregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/freecodecamp_org"
            app:layout_constraintBottom_toBottomOf="@+id/textView40"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/textView40" />

        <TextView
            android:id="@+id/textView42"
            style="@style/TextNunito14Purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <TextView
            android:id="@+id/textView43"
            style="@style/TextNunito13NormalBlackregular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pada_course_ini_kamu_akan_mempelajari_apa_bahasa_pemrograman_dimulai_dari_awal_hingga_kamu_membuat_program_sendiri_di_akhir_akan_ada_challenge_untuk_menuji_kemampuanmu"
            app:layout_constraintEnd_toEndOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <TextView
            android:id="@+id/textView44"
            style="@style/TextNunito14Purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/playlist"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView43"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="305dp"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/img_playlist"
            app:layout_constraintStart_toStartOf="@+id/textView44"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>