<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nandits.potenz.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_landingTestFragment"
            app:destination="@id/landingTestFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_course"
        android:name="com.nandits.potenz.ui.course.CourseFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.nandits.potenz.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.nandits.potenz.ui.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/chooseMotivationFragment"
        android:name="com.nandits.potenz.ui.choice.ChooseMotivationFragment"
        android:label="fragment_choose_motivation"
        tools:layout="@layout/fragment_choose_motivation" >
        <action
            android:id="@+id/action_chooseMotivationFragment_to_chooseInterestFragment"
            app:destination="@id/chooseInterestFragment" />
    </fragment>
    <fragment
        android:id="@+id/chooseInterestFragment"
        android:name="com.nandits.potenz.ui.choice.ChooseInterestFragment"
        android:label="fragment_choose_interest"
        tools:layout="@layout/fragment_choose_interest" />
    <fragment
        android:id="@+id/landingTestFragment"
        android:name="com.nandits.potenz.ui.choice.LandingTestFragment"
        android:label="fragment_landing_test"
        tools:layout="@layout/fragment_landing_test" >
        <action
            android:id="@+id/action_landingTestFragment_to_chooseMotivationFragment"
            app:destination="@id/chooseMotivationFragment" />
    </fragment>
</navigation>